extract github config from code properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=dc415ad5b970d5487eec
+github.client.secret=7f875ae843c594f4d2ea5eef523692b41d156961
+github.redirect.uri=http://localhost:8887/callback
